@@ -426,11 +426,7 @@ static NSString *AIWebURLsWithTitlesPboardType = @"WebURLsWithTitlesPboardType";
 			[contentCell setServiceIconPosition:iconPosition];
 		}
 	}
-	
-	//Collapsed group counting
-	//The preference is to hide (so that by default it's NO), so invert it
-	[groupCell setShowCollapsedCount:![[[NSUserDefaults standardUserDefaults] objectForKey:@"AIHideCollapsedGroupCount"] boolValue]];
-	
+
 	//Fonts
 	NSFont	*theFont;
 	
